updated and removed some icons and images

--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,15 @@
     --mild : #8997bd;
     --footer : #212A4A;
     --black:#060b1b;
-    --github: #000000;
-    --linkedin : #2867B2;
+    --twitter: #4ac7ec;
     --success : #1ecab8;
     --danger : #f1646c;
     --dark-blue : #28365f;
     --dark-gray: #171f33;
     --yellow: #f3c74d;
+    --github:#211F1F;
+    --codepen:#000000;
+    --linkedin:#2867B2;
 }
 
 /* Reset  */
@@ -177,7 +179,7 @@ section.profile .right ul.socials li a {
 }
 
 section.profile .right ul.socials li:nth-child(1) a {
-    background:#000000;
+    background:var(--codepen);
 }
 
 section.profile .right ul.socials li:nth-child(2) a {
@@ -379,11 +381,11 @@ section.counter__section > div {
 
 section.counter__section > div i {
     font-size: 42px;
-    margin-right: 5px;
+    margin-right: 20px;
 }
 
 section.counter__section > div:nth-child(1) i {
-    color: var(--yellow);
+    color: var(--info);
 }
 
 section.counter__section > div:nth-child(2) i {
@@ -391,7 +393,7 @@ section.counter__section > div:nth-child(2) i {
 }
 
 section.counter__section > div:nth-child(3) i {
-    color: var(--dribbble);
+    color: var(--yellow);
 }
 
 section.counter__section > div h3 {
@@ -399,6 +401,10 @@ section.counter__section > div h3 {
     font-weight: 600;
     color: var(--fade);
     margin-bottom: 8px;
+}
+section.counter__section > div
+{
+    text-align: center;
 }
 
 section.counter__section > div h5 {
@@ -408,53 +414,11 @@ section.counter__section > div h5 {
 
 section.work .wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     align-items: center;
     grid-gap: 60px;
 }
 
-section.work .wrapper .portfolio .tabs ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-section.work .wrapper .portfolio .tabs ul li a {
-    color: var(--fade);
-    border-bottom: 1px solid transparent;
-    padding: 10px 15px;
-    font-size: 14px;
-    letter-spacing: 2px;
-}
-
-section.work .wrapper .portfolio .tabs ul li a.active {
-    border-color: var(--info);
-    color: var(--info);
-    transition: all .3s ease-in-out;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -ms-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-}
-
-section.work .wrapper .portfolio .portfolio__wrapper {
-    margin-top: 4rem;
-    /* display: grid;
-    grid-template-columns: repeat(3, 1fr); */
-    display: flex;
-}
-
-section.work .wrapper .portfolio .portfolio__wrapper .item {
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-}
-
-section.work .wrapper .portfolio .portfolio__wrapper a img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 section.work .wrapper .slider__wrapper .icon__wrap {
     color: var(--info);
     font-size: 26px;
@@ -494,14 +458,6 @@ section.work .wrapper .slider__wrapper .slider .slide{
 
 section.work .wrapper .slider__wrapper {
     overflow: hidden;
-}
-
-section.partners .brands__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    opacity: 0.5;
-    /* filter: invert(100%); */
 }
 
 section.contact .wrapper {
