--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,12 @@
     --mild : #8997bd;
     --footer : #212A4A;
     --black:#060b1b;
-    --twitter: #4ac7ec;
+    --github: #211f1f;
     --success : #1ecab8;
     --danger : #f1646c;
     --dark-blue : #28365f;
     --dark-gray: #171f33;
     --yellow: #f3c74d;
-    --github:#211F1F;
-    --codepen:#000000;
-    --linkedin:#2867B2;
 }
 
 /* Reset  */
@@ -76,9 +73,12 @@ nav .inner button {
     color:var(--pure);
     font-size:14px;
     border-radius: 4px;
-
 }
 
+nav .inner button a {
+    background: var(--secondary);
+    color:var(--pure);
+}
 section.profile {
     background: var(--black);
     display:flex;
@@ -179,7 +179,7 @@ section.profile .right ul.socials li a {
 }
 
 section.profile .right ul.socials li:nth-child(1) a {
-    background:var(--codepen);
+    background:var(--secondary);
 }
 
 section.profile .right ul.socials li:nth-child(2) a {
@@ -187,7 +187,7 @@ section.profile .right ul.socials li:nth-child(2) a {
 }
 
 section.profile .right ul.socials li:nth-child(3) a {
-    background:var(--linkedin);
+    background:var(--secondary);
 }
 
 .section__heading {
@@ -236,7 +236,7 @@ section.about .content p {
 }
 
 section.about .content .left button{
-    background: rgba(77, 121, 246, 0.1);
+    background:var(--secondary);
     color: var(--info);
     padding: 4px 8px;
     font-size: 12px;
@@ -244,6 +244,10 @@ section.about .content .left button{
     line-height: 24px;
     outline: none;
     cursor: pointer;
+}
+
+section.about .content .left button a {
+    color:var(--pure);
 }
 
 section.about .content .right p {
@@ -381,11 +385,11 @@ section.counter__section > div {
 
 section.counter__section > div i {
     font-size: 42px;
-    margin-right: 20px;
+    margin-right: 5px;
 }
 
 section.counter__section > div:nth-child(1) i {
-    color: var(--info);
+    color: var(--yellow);
 }
 
 section.counter__section > div:nth-child(2) i {
@@ -393,7 +397,7 @@ section.counter__section > div:nth-child(2) i {
 }
 
 section.counter__section > div:nth-child(3) i {
-    color: var(--yellow);
+    color: var(--dribbble);
 }
 
 section.counter__section > div h3 {
@@ -401,10 +405,6 @@ section.counter__section > div h3 {
     font-weight: 600;
     color: var(--fade);
     margin-bottom: 8px;
-}
-section.counter__section > div
-{
-    text-align: center;
 }
 
 section.counter__section > div h5 {
@@ -419,6 +419,48 @@ section.work .wrapper {
     grid-gap: 60px;
 }
 
+section.work .wrapper .portfolio .tabs ul {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+section.work .wrapper .portfolio .tabs ul li a {
+    color: var(--fade);
+    border-bottom: 1px solid transparent;
+    padding: 10px 15px;
+    font-size: 14px;
+    letter-spacing: 2px;
+}
+
+section.work .wrapper .portfolio .tabs ul li a.active {
+    border-color: var(--info);
+    color: var(--info);
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+}
+
+section.work .wrapper .portfolio .portfolio__wrapper {
+    margin-top: 4rem;
+    /* display: grid;
+    grid-template-columns: repeat(3, 1fr); */
+    display: flex;
+}
+
+section.work .wrapper .portfolio .portfolio__wrapper .item {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+}
+
+section.work .wrapper .portfolio .portfolio__wrapper a img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 section.work .wrapper .slider__wrapper .icon__wrap {
     color: var(--info);
     font-size: 26px;
@@ -458,6 +500,12 @@ section.work .wrapper .slider__wrapper .slider .slide{
 
 section.work .wrapper .slider__wrapper {
     overflow: hidden;
+}
+
+section.partners .brands__wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 section.contact .wrapper {
@@ -558,7 +606,7 @@ footer {
     color: var(--ternary);
 }
 
-/* Media Queries  */
+/* Responsive */
 
 @media (max-width: 1280px) {
     .container {
